ex4/testdata/typechecker/error/NewTest-err3.java
class NewTest {
	public static void main(String[] a){
            B x;
            x = new A(); //TE
	}
}

class A {}

class B extends A{}